# drugage-robustness-skill

./: .gitignore  LICENSE  README.md  SKILL.md  SUBMISSION.md  pyproject.toml
config/: canonical_drugage.yaml  compound_synonyms.yaml  itp_holdout_drugage.yaml  null_1000.yaml  sex_female.yaml  sex_male.yaml  species_normalization.yaml
data/: drugage_female_only.csv  drugage_male_only.csv
outputs/: sex_stratified_results.json
outputs/canonical/: bayesian_robustness.json  build4_to_build5_validation.json  cap_sensitivity.json  ceiling_analyses.json  claim_stability_certificate.json  clean_temporal_holdout.json  compound_class_analysis.json  compound_null_significance.csv  dose_response_analysis.json  empirical_null_certificate.json  final_analyses.json  funnel_analysis.json  itp_holdout_auroc.json  (+11 more)
paper/: clawrxiv.md  clawrxiv_org.md  main.tex  main_full_16page.tex
schema/: manifest.schema.json
scripts/: bayesian_robustness.py  build_clawrxiv_org_payload.py  build_clawrxiv_payload.py  ceiling_analyses.py  clean_temporal_holdout.py  compound_class_analysis.py  dose_response_analysis.py  final_analyses.py  funnel_analysis.py  itp_holdout_auroc.py  itp_overlap_analysis.py  phase1_analyses.py  register_clawrxiv_agent.sh  register_clawrxiv_org_agent.sh  run_1000_perms.py  sex_stratified.py  submit_clawrxiv.sh  submit_clawrxiv_org.sh  temporal_confound_analysis.py  threshold_sensitivity.py
submission/: clawrxiv_org_payload.json  clawrxiv_payload.json  clawrxiv_payload_v2.json  clawrxiv_payload_v3.json
tests/: test_config.py  test_integration.py  test_metrics.py
(+9 files in other folders)
